# wbauth

./: .gitignore  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  strategic_memo_ru.md
.github/workflows/: cloudflare-debug.yml  conformance.yml  python.yml  snapshot.yml  typescript.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-foundation-cryptographic-root/: 01-01-HOSTING-RESULT.md  01-01-SUMMARY.md  01-01-day1-hosting-confirmation-PLAN.md  01-02-SUMMARY.md  01-02-monorepo-scaffold-PLAN.md  01-03-SUMMARY.md  01-03-identity-and-signer-PLAN.md  01-04-SUMMARY.md  01-04-test-vectors-and-conformance-PLAN.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-python-adapters-policy-inspector/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-hosted-directory-cloudflare-submission/: 03-01-PLAN.md  (+11 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
directory/: README.md  env.d.ts  package-lock.json  package.json  schema.sql  tsconfig.json  vitest.config.ts  wrangler.jsonc
directory/migrations/: 0001_create_agents.sql  0002_create_registration_challenges.sql  0003_create_ratelimit.sql
directory/src/: blocklist.ts  env.ts  index.ts  ratelimit.ts  schemas.ts  signing.ts
directory/tests/: blocklist.test.ts  handlers.test.ts  ratelimit.test.ts  verify.test.ts
examples/: README.md  browser_use_demo.py  openai_agents_demo.py  stagehand_demo.ts
python/: README.md  pyproject.toml  pyrightconfig.json
python/scripts/: e2e_phase3.py  generate_directory_jwk.py  generate_expected_vectors.py
python/src/wbauth/: __init__.py  _redaction.py  cli.py  identity.py  normalized_request.py  signer.py
python/src/wbauth/_http_server/: __init__.py  jwks_server.py
python/src/wbauth/_smoke/: __init__.py  cloudflare_debug.py
python/src/wbauth/adapters/: __init__.py  _utils.py  httpx_auth.py  playwright.py  requests_adapter.py
python/src/wbauth/policy/: __init__.py  cache.py  errors.py  inspector.py  policy.py  verdict.py
python/src/wbauth/policy/parsers/: __init__.py  ai_txt.py  llms_txt.py  robots.py  signing_directory.py
python/tests/: conftest.py  test_adapter_conformance.py  test_adapters_httpx.py  test_adapters_package.py  test_adapters_playwright.py  test_adapters_requests.py  test_cli.py  test_cli_inspect.py  test_cli_keygen.py  test_cli_keygen_jwks_output.py  test_cli_register.py  test_cli_serve.py  test_cli_verify.py  test_identity.py  test_jwks_server.py  test_policy_cache.py  test_policy_inspector.py  test_policy_parsers_ai_txt.py  test_policy_parsers_llms_txt.py  test_policy_parsers_robots.py  test_policy_parsers_signing_directory.py  test_policy_verdict.py  test_signer.py  test_vectors.py
python/tests/fixtures/policy/ai_txt/: malformed.txt  minimal.txt  with_restrictions.txt
python/tests/fixtures/policy/llms_txt/: full.txt  minimal.txt
python/tests/fixtures/policy/robots/: disallow.txt  html_200.txt  malformed.txt
python/tests/fixtures/policy/signing_directory/: present.json
scripts/: post-sync.sh  snapshot.sh
spec/test-vectors/: README.md
typescript/: README.md  biome.json  package.json  tsconfig.json  tsup.config.ts
typescript/src/: identity.ts  index.ts  normalized-request.ts  signer.ts
typescript/tests/: helpers.ts  identity-multikey.test.ts  identity-roundtrip.test.ts  identity.test.ts  signer.test.ts  vectors.test.ts
(+29 files in other folders)
