[project]
name = "wbauth"
version = "0.1.0"
description = "Web Bot Auth (RFC 9421) Python SDK — agent identity for the agentic web"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "wbauth contributors" }]
dependencies = [
    "cachetools>=7,<8",
    "cryptography>=47,<48",
    "http-message-signatures>=2.0.1,<3",
    "httpx>=0.28,<0.30",
    "playwright>=1.59,<2",
    "protego>=0.6,<1",
    "requests>=2.32,<3",
]

[project.optional-dependencies]
windows = ["oschmod>=0.3"]

[project.scripts]
wbauth = "wbauth.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wbauth"]

[dependency-groups]
dev = [
    "pytest>=8",
    "anyio>=4",
    "ruff>=0.6",
    "pyright>=1.1",
    "pytest-httpx",
    "responses",
]

# Pyright config lives in `python/pyrightconfig.json` — pyright auto-discovers
# it regardless of the invocation working directory (a [tool.pyright] block in
# this pyproject.toml is only picked up when pyright is run with this exact
# pyproject as its config-discovery root, which CI doesn't do).
